<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menuToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/homeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuToolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/homeIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@null"
                android:contentDescription="@string/home_icon_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_icon_desc"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/localLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toEndOf="@+id/homeLayout"
        app:layout_constraintTop_toBottomOf="@+id/menuToolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/localMusicIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@null"
                android:contentDescription="@string/local_music_icon_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_music_icon_desc"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/onlineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/onlineMusicIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@null"
                android:contentDescription="@string/online_music_icon_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online_music_icon_desc"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/downloadLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toEndOf="@+id/onlineLayout"
        app:layout_constraintTop_toBottomOf="@+id/localLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/downloadIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@null"
                android:contentDescription="@string/download_icon_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_icon_desc"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/settingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onlineLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/settingIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@null"
                android:contentDescription="@string/setting_icon_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_icon_desc"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/moreappLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toEndOf="@+id/settingLayout"
        app:layout_constraintTop_toBottomOf="@+id/downloadLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/moreAppIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@null"
                android:contentDescription="@string/more_app_icon_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_app_icon_desc"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
